test/libyul/yulSyntaxTests/break_outside_of_for_loop.yul
{
	let x
	if x { break }
}
// ----
// SyntaxError 2592: (17-22): Keyword "break" needs to be inside a for-loop body.
